--- a/content/theme/partials/comments.html
+++ b/content/theme/partials/comments.html
@@ -2,9 +2,9 @@
 <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
 
 <script src="https://giscus.app/client.js" data-repo="geotribu/site-contribuer" data-repo-id="R_kgDOItTqpQ"
-    data-category="Commentaires" data-category-id="DIC_kwDOItTqpc4CTXat" data-mapping="url" data-strict="0"
-    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme"
-    data-lang="fr" data-loading="lazy" crossorigin="anonymous" async>
+    data-category-id="DIC_kwDOItTqpc4CTXat" data-mapping="pathname" data-strict="0" data-reactions-enabled="1"
+    data-emit-metadata="1" data-input-position="top" data-theme="preferred_color_scheme" data-lang="fr"
+    data-loading="lazy" crossorigin="anonymous" async>
     </script>
 
 <!-- Synchronize Giscus theme with palette -->
