--- a/content/theme/assets/stylesheets/extra.css
+++ b/content/theme/assets/stylesheets/extra.css
@@ -2,10 +2,12 @@
 .md-tabs__link {
   font-size: .80rem;
 }
+
 .md-tabs__link--active {
   color: var(--md-accent-fg-color);
   font-weight: bold !important;
 }
+
 .md-tabs__link:hover {
   color: var(--md-accent-fg-color--light);
   font-size: .80rem !important;
@@ -36,6 +38,11 @@ img {
 
 .emojione,
 .twemoji {
+  box-shadow: none;
+  border: none;
+}
+
+.md-header__button.md-logo img {
   box-shadow: none;
   border: none;
 }
@@ -81,7 +88,7 @@ img {
   opacity: 0.75;
 }
 
-.md-typeset button[data-md-color-scheme] > code {
+.md-typeset button[data-md-color-scheme]>code {
   display: block;
   color: var(--md-primary-bg-color);
   background-color: var(--md-primary-fg-color);
