--- a/content/theme/assets/stylesheets/extra.css
+++ b/content/theme/assets/stylesheets/extra.css
@@ -25,7 +25,7 @@ img {
   box-shadow: 0px 1px 2px darkgrey;
 }
 
-.img-rdp-news-thumb {
+.img-thumbnail-left {
   float: left;
   clear: right;
   overflow: auto;
