--- a/content/theme/assets/stylesheets/extra.css
+++ b/content/theme/assets/stylesheets/extra.css
@@ -47,17 +47,31 @@ img {
   border: none;
 }
 
+.img-left {
+  /* left align with text float on the right */
+  float: left;
+  margin-right: 10px;
+}
+
 .img-right {
   /* right align with text float on the left */
   float: right;
   margin-left: 10px;
 }
 
-.img-center {
+.img-center,
+.img-center-noborder {
   display: block;
   margin-left: auto;
   margin-right: auto;
   max-width: 75%;
+}
+
+.img-center-noborder {
+  border: none;
+  /* Supprime la bordure */
+  box-shadow: none;
+  /* Supprime l'ombre de la boîte */
 }
 
 .img-license-picto {
